k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: astranova-service
spec:
  selector:
    app: astranova-app
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
